--- a/src/Jili/ApiBundle/Resources/views/header.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/header.html.twig
@@ -304,5 +304,6 @@ function selectCity_amazon(){
 
 {% include '::menu.html.twig' %}
 
+{% include '::userinfo.html.twig' %}
 {% block body %}{% endblock %}
 {% include 'JiliApiBundle::footer.html.twig' %} 
