--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -329,8 +329,7 @@ function selectCity_amazon(){
 {% block body %}{% endblock %}
 </div>	
 {% include 'JiliApiBundle::footer.html.twig' %} 
-
-
+{% include '::userinfo.html.twig' %}
 
 </body>
 </html>
