首页网站改版 #399
调整覆盖层位置

--- a/src/Jili/FrontendBundle/Resources/views/base.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/base.html.twig
@@ -330,6 +330,6 @@ function selectCity_amazon(){
 </div>	
 {% include 'JiliApiBundle::footer.html.twig' %} 
 {% include '::userinfo.html.twig' %}
-
+<div class="blackBg" style="display: none;"></div>
 </body>
 </html>
