网站改版：商家列表 #400

--- a/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/shopList.html.twig
@@ -22,7 +22,7 @@
         {{ include( "JiliEmarBundle:Websites:shopList_category.html.twig") }}
     </div>
     <div class="shopR globBorder fr">
-        {% include 'JiliEmarBundle:Websites:shoplist_search_by_the_first letter.html.twig' %}
+        {% include 'JiliEmarBundle:Websites:shoplist_search_by_the_first_letter.html.twig' %}
         <div class="center">
         {% include "JiliEmarBundle:Websites:shopList_page.html.twig" %}
             <script type="text/javascript">
