fix baidu and homepage and ie hack

--- a/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Callboard/info.html.twig
@@ -18,10 +18,10 @@
     {{ callboard.content | raw }}
     </div>
   </article>
-  <aside style="width:215x; height:300px; float:right; margin-top: 0;">
+  <aside style="width:215px; height:300px; float:right; margin-top: 0;">
   	<!-- 公告右侧一（纯文字）（改）-->  
     {% include "JiliApiBundle:Ads:cpro_baidu.html.twig" with { cpro_id:"u1645392" } %}
   </aside>
   
-</div>
+</div> 
 {% endblock %}
