--- a/src/Jili/ApiBundle/Resources/views/Top/adBanner.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/adBanner.html.twig
@@ -10,5 +10,5 @@
     <div class="sliderBtns"><b class="active"></b><b></b><b></b><b></b><b></b></div>
 </div>
 {% else %}
-<div class="loginBefore"><a href="#" target="_blank"><img src="{{ asset('images1408/loginBefore.jpg') }}" width="518" height="191" /></a></div>
+<div class="loginBefore"><a href="#"><img src="{{ asset('images1408/loginBefore.jpg') }}" width="518" height="191" /></a></div>
 {% endif %}
