--- a/web/css/help.css
+++ b/web/css/help.css
@@ -12,26 +12,22 @@
 	text-align:left;
 }
 .help article h2 {
-	height: 30px;
-	line-height: 30px;
-	position: relative;
+	height: 31px;
+	line-height:31px;
+	right: 0;
+	position: absolute;
 }
 .help article h2 .qaBtn {
 	background-color: #FF8C4A;
 	color: #FFFFFF;
-	display: inline-block;
 	font-size: 14px;
 	font-weight: normal;
-	line-height: 100%;
 	padding: 7px 20px 7px 15px;
-	position: absolute;
-	right: 1px;
 	text-decoration: none;
-	top: 38px;
 	opacity: .8;
 	Filter: alpha(opacity=80);
-	background-image:url(../images/upDownArrow.gif);
-	background-repeat:no-repeat;
+	background-image: url(../images/upDownArrow.gif);
+	background-repeat: no-repeat;
 	background-position: 76px 11px;
 }
 .help article h2 .qaBtn:hover {
@@ -45,6 +41,7 @@
 }
 .help article .tabs-nav {
 	border-bottom: 3px solid #e4e4e2;
+	*+display:inline-block;
 }
 .help article .tabs-nav li {
 	float: left;
@@ -116,7 +113,8 @@
 	border-top: 2px solid #ff8c4a;
 	position: absolute;
 	right: 1px;
-	top: 66px;
+	top: 31px;
+	top: 30px\0;
 	width: 480px;
 	box-shadow: 0 3px 3px #999999;
 	z-index: 999;
