--- a/web/css140307/common.css
+++ b/web/css140307/common.css
@@ -60,17 +60,17 @@ select, textarea, input[type="text"], input[type="password"], input[type="dateti
 #header{ width:100%;}
 #topbar{ background-color:#f5f5f5; width:100%; height:30px; line-height:30px; color:#666; border-bottom: 1px solid #ececec;}
 #userbar{ float:right; position:relative;}
-#userbar li{ float:left; line-height: 28px;}	
+#userbar li{ float:left; line-height: 28px; position:relative!important; z-index:1; }	
 #userbar li.split { background: none repeat scroll 0 0 #CCC; color: #CCC; height: 12px; margin: 9px; width: 1px; overflow:hidden;}
 #userbar li a{ background:url(../images140307/iconImage.png) no-repeat; cursor:pointer;}
 #userbar li a.message{ padding-left: 20px; background-position: left 3px;}
 #userbar li a.personal{ background-position: 53px -23px; padding-right: 10px;}
-#userbar  #userFrame {background-color: #FFFFFF;border: 1px solid #e0e0e0; display: none;left: 0;position: absolute;top: 30px; width: 135px; text-align:left; z-index: 8000;}
-#userbar  #userFrame .userInfo { background:url("../images140307/iconImage.png") no-repeat scroll 10px -447px; border-bottom: 1px solid #EEEEEE; margin-bottom: 5px; padding: 5px 0 5px 33px;}
-#userbar  #userFrame ul.menu li {line-height: 230%;float:none;}
-#userbar  #userFrame ul.menu li a {color: #666666; display: block; text-indent: 15px; width: 100%;background:none;}
-#userbar  #userFrame ul.menu li a:hover {background-color: #F0F0F0;text-decoration: none;}
-#userbar  #userFrame ul.menu li.logOut { border-top: 1px solid #EEEEEE; line-height: 250%; margin-top: 5px;}
+#userbar #userFrame {background-color: #FFFFFF;border: 1px solid #e0e0e0; display: none;left: 0;position: absolute;top: 30px; width: 135px; text-align:left; z-index: 9999;}
+#userbar #userFrame .userInfo { background:url("../images140307/iconImage.png") no-repeat scroll 10px -447px; border-bottom: 1px solid #EEEEEE; margin-bottom: 5px; padding: 5px 0 5px 33px;}
+#userbar #userFrame ul.menu li {line-height: 230%;float:none;}
+#userbar #userFrame ul.menu li a {color: #666666; display: block; text-indent: 15px; width: 100%;background:none;}
+#userbar #userFrame ul.menu li a:hover {background-color: #F0F0F0;text-decoration: none;}
+#userbar #userFrame ul.menu li.logOut { border-top: 1px solid #EEEEEE; line-height: 250%; margin-top: 5px;}
 #headerContent{ padding:15px 0; background-color:#FFF;}
 #headerContent #logo{ float:left;}
 
