--- a/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Top/index.html.twig
@@ -131,7 +131,7 @@
       <div class="mask">
         {{ render(controller('JiliApiBundle:Top:ranking' ) ) }}
       </div>
-      <div class="menu"><a class="month hover">月度</a><a class="year">年度</a></div>
+      <div class="menu"><a class="month prevBtn hover">月度</a><a class="year nextBtn">年度</a></div>
     </div>    <!-- eof ranking   -->
     <div class="fr" style="margin-top:15px;">
         <!-- 首页右侧一（300*250，纯文字）-->
