--- a/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/hot_on_top.html.twig
@@ -20,8 +20,8 @@
             {% endfor %}
         </ul>
     </div>
-    <bdo class="preGroup"></bdo>
-    <bdo class="nextGroup"></bdo>
+    <bdo class="prevBtn"></bdo>
+    <bdo class="nextBtn"></bdo>
 </div>
  <script type="text/javascript">
 	$(function(){
