--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -6,6 +6,7 @@
 <link href="{{ asset('css140307/recommend.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/shopMore.css') }} " rel="stylesheet" type="text/css">
 <link href="{{ asset('css140307/commodity834.css') }} " rel="stylesheet" type="text/css">
+<link href="{{ asset('css140307/searchShop.css') }} " rel="stylesheet" type="text/css">
 {% endblock %}
 
 {% block javascript %}
@@ -81,7 +82,19 @@
   </div><!-- eof main  -->
 
   <div class="sidebar w154 fr">
-  	<div class="rebateProcess borderGlob">
+
+  <div class="busiSec">
+    <h3 class="busiSecTit">同类商家推荐</h3>
+    <div class="busiSecBd">
+      <ul id="mallsRecommend">
+        <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/11/6374807b8cedd9dc6e2e0afb6e3949b5.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
+        <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/03/e16f77e4eeb0b16b969ba587d63d481c.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
+        <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/03/3df93618a3d8ae634d347de7b2e28ac1.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
+	  </ul>
+    </div>
+  </div>
+
+  <div class="rebateProcess borderGlob marginBM5">
     	<h3>返利流程</h3>	
         <img src="{{ asset('images140307/rebateExplain.jpg') }}" />
     </div>
