--- a/web/css140307/searchShop.css
+++ b/web/css140307/searchShop.css
@@ -67,7 +67,7 @@
 	font-weight:bold;
 }
 .busiSec .busiSecBd {
-	padding: 5px 15px;
+	padding: 5px 15px 15px;
 	background: #fff;
 	border: solid #e6e6e6;
 	border-width: 0 1px 1px;
