--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -83,7 +83,7 @@
 
   <div class="sidebar w154 fr">
 
-  <div class="busiSec">
+  <!--<div class="busiSec">
     <h3 class="busiSecTit">同类商家推荐</h3>
     <div class="busiSecBd">
       <ul id="mallsRecommend">
@@ -92,9 +92,9 @@
         <li><a href="#" target="_blank"><img src="http://img0.egou.com/shop/201312/03/3df93618a3d8ae634d347de7b2e28ac1.gif" width="120" height="60" alt=""><span class="itemTxt">最高返<strong class="corGlobRed"> 4%</strong></span></a></li>
 	  </ul>
     </div>
-  </div>
+  </div>-->
 
-  <div class="rebateProcess borderGlob marginBM5">
+  <div class="rebateProcess borderGlob">
     	<h3>返利流程</h3>	
         <img src="{{ asset('images140307/rebateExplain.jpg') }}" />
     </div>
