首页，91问问快速问答接口数据显示 #437

--- a/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Home/index.html.twig
@@ -35,6 +35,9 @@
         {% else %}
             {{ render(controller('JiliApiBundle:Top:userInfo' ) ) }}
         {% endif %}
+        <div class="quickQ">
+            {{ render(controller('JiliFrontendBundle:Home:vote' ) ) }}{# 快速问答#}
+        </div>
         <div class="notice shadowGlob">
             <h2>最新公告</h2>
             {{ render(controller('JiliApiBundle:Top:callboard' ) ) }}
