--- a/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/editExperienceAdvertisement.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/editExperienceAdvertisement.html.twig
@@ -12,16 +12,21 @@
 </script>
 </HEAD>
 <BODY>
-<form action="{{ path('_bankend_editExperienceAdvertisement') }}" method="post" id="form1"  >
+<form action="{{ path('_bankend_editExperienceAdvertisement', {'id': app.request.get('id') }) }}" method="post" id="form1" {{ form_enctype(form) }} >
+{{form_widget(form.id)}}
 <table align='center'>
 <tr><td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr><td>{{form_label(form.missionTitle)}}:</td><td>{{ form_widget(form.missionTitle) }}</td></tr>
 <tr><td>{{form_label(form.missionHall)}}:</td><td>{{ form_widget(form.missionHall) }}</td></tr>
-<tr><td>{{form_label(form.missionImgUrl)}}:<br />（任务大厅一：94x78 / 任务大厅二：116x78</td><td>{{form_widget(form.missionImgUrl)}}</td></tr>
+<tr><td>{{form_label(form.missionImgUrl)}}:<br />（任务大厅一：94x78 / 任务大厅二：116x78</td>
+    <td>{{form_widget(form.missionImgUrl)}}<br /><img src="{{ asset(form.vars.value.missionImgUrl) }}" /></td></tr>
 <tr><td>{{form_label(form.point)}}:</td><td>{{form_widget(form.point)}}</td></tr>
-<tr><td>&nbsp;</td><td><input type="submit" name="add" value="提 交"/></td></tr>
+<tr><td>&nbsp;</td><td><input type="submit"  value="提 交"/></td></tr>
 {{form_rest(form)}}
 {{form_errors(form)}}
+{% if code %}
+<font color='red'>{{ code }}</font>
+{%endif%}
 </table>
 </form>
 </BODY></HTML>
