--- a/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/Websites/detail.html.twig
@@ -88,7 +88,7 @@
     <div class="busiSecBd">
       <ul id="mallsRecommend">
         {% for row in same_cat_websites %}
-        <li><a href="{{row.web_o_url}}" target="_blank">
+        <li><a href="{{path('jili_emar_websites_detail', {'wid': row.web_id })}}" target="_blank">
             <img src="{{row.logo_url}}" width="120" height="60" alt="">
             {%if row.max_commission%}
             <span class="itemTxt">最高返<strong class="corGlobRed">{{row.max_commission}}%</strong></span>
