add contact content

--- a/src/Jili/ApiBundle/Resources/views/Default/about.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Default/about.html.twig
@@ -13,9 +13,9 @@
   <div class="line">
     <dd class="right ddOne"><img src="{{ asset('images/aboutImg1.jpg')}}" width="415" height="204"></dd>
     <dt class="dtOne">
-      <h3><img src="{{ asset('images/aboutImg1.gif')}}" alt="关于积粒网"></h3>
+      <h3 class="fontYH">关于积粒网</h3>
       <p>积粒网是由网曦信息科技（上海）有限公司运营的全新积分媒体。</p>
-      <h3><img src="{{ asset('images/aboutImg2.gif')}}" alt="在这里，您可以..."></h3>
+      <h3 class="fontYH">在这里，您可以...</h3>
       <p>通过积粒网的各种活动，您可以从日常的上网行为中获得积分，如体验某些<span>互联网广告</span>、<span>在购物网站购物</span>、<span>试玩网络游戏</span>等，进而将积分兑换成现金、手机费及各种其他奖励。</p>
     </dt>
   </div>
@@ -23,7 +23,7 @@
   <div class="line">
     <dd class="left ddTwo"><img src="{{ asset('images/aboutImg2.jpg')}}" width="212" height="196"></dd>
     <dt class="dtTwo">
-      <h3><img src="{{ asset('images/aboutImg3.gif')}}" alt="今后..."></h3>
+      <h3 class="fontYH">今后...</h3>
       <p>积粒网还将成为一个积分的兑换平台，您可以把其他网站上累计的积分兑换到积粒网，如<span>航空公司积分</span>、<span>银行积分</span>、<span>旅游网站积分</span>等，以解决小额积分浪费和分散的问题。</p>
     </dt>
   </div>
@@ -31,9 +31,18 @@
   <div class="line">
     <dd class="right ddThree"><img src="{{ asset('images/aboutImg3.jpg')}}" width="165" height="154"></dd>
     <dt class="dtThree">
-      <h3><img src="{{ asset('images/aboutImg4.gif')}}" alt="赚积分，攒积分，花积分！一站搞定！"></h3>
+      <h3 class="fontYH">赚积分，攒积分，花积分！一站搞定！</h3>
       <p>我们将本着以用户为中心的运营理念，全心为用户提供一站式的积分平台服务，实现“赚积分，攒积分，花积分”一站搞定！<br />
         请广大网友支持积粒网，积极参与积粒网的活动，多提宝贵意见！</p>
+    </dt>
+  </div>
+  <div class="hr"></div>
+  <div class="line">
+    <dd class="left ddFour"><img src="{{ asset('images/aboutImg4.jpg')}}" width="137" height="141"></dd>
+    <dt class="dtFour">
+      <h3 class="fontYH">联系我们</h3>
+      <p>公司地址： 上海市延安西路895号申亚金融广场19楼<br />
+      联系方式： <a href=mailto:cs@91jili.com><span>cs@91jili.com</span></a></p>
     </dt>
   </div>
 </div>
