--- a/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
+++ b/src/Jili/FrontendBundle/Resources/views/Landing/external_landing.html.twig
@@ -72,7 +72,11 @@
                         <li><span class="defaultTxt">{{  form.captcha.vars.label  }}</span>
                         {{ form_widget( form.captcha ) }}
                         </li>
+                        {{ form_rest(form)}}
 
+                        <li class="clearfix">
+                            <input id="loginSubmit" name="login" type="submit" class="submit" value="Sign Up" autocomplete="off"/>
+                            </li>
                     </ul>
 
                 </form>
